# PI-2022-G5

./: .eslintrc.cjs  .gitignore  README.md  components.json  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vercel.json  vite.config.js
api/: Pipfile  app.py  database.db  models.py  pyproject.toml  requirements.txt  test.py
cypress/e2e/: testes_pi.cy.ts
src/: app.css  app.html
src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-separator.svelte  dropdown-menu-sub-content.svelte  dropdown-menu-sub-trigger.svelte
src/lib/components/ui/form/: form-element-field.svelte  form-field.svelte  form-fieldset.svelte
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/sonner/: sonner.svelte
src/lib/components/ui/textarea/: textarea.svelte
src/lib/linguagens/: br.json  es.json  us.json
src/routes/: +layout.svelte  +page.svelte
src/routes/contato/: +page.svelte
src/routes/sobre/: +page.svelte
