[tool.ruff]
fix = true
indent-width = 4
output-format = "full"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 255
target-version = "py312"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
unfixable = [
    # "B", # NAO CORRIGE ERROS flake8-bugbear
    "E402", # NAO CORRIGE ERROS DE IMPORTACAO FORA DO TOPO DO ARQUIVO
    "F401", # NAO CORRIGE ERROS DE IMPORTACAO NAO UTILIZADA
    "B905", # NAO CORRIGE ERROS DE ZIP SEM VALOR DE 'strict'
]
select = ["ALL"]
ignore = [
    "INP001",  # IGNORA FALTA DE __init__.py
    "DTZ001",  # IGNORA FALTA DE TIMEZONE EM FUNCOES DATETIME
    "DTZ005",  # IGNORA FALTA DE TIMEZONE EM FUNCOES DATETIME
    "DTZ007",  # IGNORA FALTA DE TIMEZONE EM FUNCOES DATETIME
    "T201",    # IGNORA USO DE PRINT
    "T203",    # IGNORA USO DE PPRINT
    "D100",    # IGNORA FALTA DE DOCSTRING NOS ARQUIVOS
    "E501",    # IGNORA LINHAS MUITO LONGAS
    "ERA001",  # IGNORA CODIGO COMENTADO
    "PLR2004", # IGNORA USO DE VALOR MAGICO
    "D401",    # IGNORA DOCSTRING NAO ESTAR EM IMPERATIVO
    "S608",    # IGNORA SQL INJECTION
    "TRY002",  # IGNORA CUSTOM EXCEPTION
    "TRY003",  # IGNORA MENSAGENS LONGAS FORA DA CLASSE EXCEPTION
    "E402",    # IGNORA ERROS DE IMPORTACAO FORA DO TOPO DO ARQUIVO
    "E741",    # IGNORA O USO DE CARACTERES AMBIGUOS COMO NOME DE VARIAVEIS

    # "BLE001",
    # "C901", # IGNORA FUNCOES COM ALTA COMPLEXIDADE
    # "A002", # IGNORA ID SOBREPOE PYTHON BUILTIN
    # "A003", # IGNORA ID SOBREPOE PYTHON BUILTIN
    # "W605", # IGNORA SEQUENCIA DE ESCAPE INVALIDA
    # "UP025", # IGNORA O USO DE UNICODE EM STRINGS (PARA PYTHON 2)
    # "UP032", # IGNORA O USO DE FORMAT EM STRINGS (PARA PYTHON 2)
    # "UP009", # IGNORA A PRESENCA DE DECLARACAO UTF-8 NO INCIO DO SCRIPT (PARA PYTHON 2)
    # "UP007", # IGNORA OPTIONAL TYPE HINT
    # "N806" # IGNORA VARIAVEIS EM CAIXA ALTA DENTRO DE FUNCOES
]
[tool.ruff.lint.pylint]
max-args = 10

[project]
name = ""
version = "0.0.1"
requires-python = "~=3.10"
dependencies = [
    "annotated-types==0.6.0",
    "anyio==4.3.0",
    "certifi==2024.2.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "dnspython==2.6.1",
    "email-validator==2.1.1",
    "exceptiongroup==1.2.1",
    "fastapi==0.111.0",
    "fastapi-cli==0.0.2",
    "greenlet==3.0.3",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httptools==0.6.1",
    "httpx==0.27.0",
    "idna==3.7",
    "jinja2==3.1.4",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "orjson==3.10.3",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.1",
    "pydantic-core==2.18.2",
    "pygments==2.18.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "pyyaml==6.0.1",
    "rich==13.7.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.30",
    "sqlmodel==0.0.18",
    "starlette==0.37.2",
    "typer==0.12.3",
    "typing-extensions==4.11.0",
    "ujson==5.9.0",
    "uvicorn==0.29.0",
    "yagmail==0.15.293",
    "watchfiles==0.21.0",
    "websockets==12.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
